--- a/package.json
+++ b/package.json
@@ -1,8 +1,40 @@
 {
   "name": "dark-emerald",
   "displayName": "Dark Emerald",
-  "description": "",
+  "description": "A captivating dark mode theme for Visual Studio Code, featuring a soothing emerald green and a carefully selected palette for an immersive coding experience.",
   "version": "0.0.1",
+  "publisher": "navinAce",
+  "license": "MIT",
+  "author": {
+    "name": "Navinraj Nadar",
+    "email": "navinraj99305@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/navinAce/dark-emerald-vscode-theme"
+  },
+  
+    "keywords": [
+      "theme",
+      "dark",
+      "emerald",
+      "green",
+      "vscode",
+      "visual-studio-code",
+      "syntax-highlighting",
+      "color-theme",
+      "color-scheme",
+      "code-theme",
+      "dark-mode",
+      "dark-theme",
+      "dark-color-scheme",
+      "dark-color-theme",
+      "dark-syntax-highlighting",
+      "dark-code-theme",
+      "dark-visual-studio-code-theme",
+      "dark-visual-studio-code-color-theme",
+      "dark-visual-studio-code-syntax-highlighting"
+    ],
   "engines": {
     "vscode": "^1.92.0"
   },
