Update package.json to include changelog file path

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
   "categories": [
     "Themes"
   ],
+  "extension": {
+    "changelog": "./CHANGELOG.md"
+  },
   "contributes": {
     "themes": [
       {
